crates/etas_tests/fixtures/compiler/projects/negative/effect_checked_index_04/src/app/effects/service.es
module app.effects.service;

import app.effects.model.{EffectInput};

public flow run_effect_project(input: EffectInput) -> i32 ![]
{
    let labels = [input.body, "fallback"];
    let selected = labels[0];
    return 5;
}
